# OpenCVCMake

./: CMakeLists.txt  Inference.cpp  Inference.h  main.cpp
