cmake_minimum_required( VERSION 2.8 )
project( openCVTest )
set(OpenCV_DIR "C:/Users/jrabr/OneDrive/Documents/New folder/opencv/build/x64/vc16/lib")
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( openCVTest main.cpp )
target_link_libraries( openCVTest ${OpenCV_LIBS} )